# ozon_crowling

./: .isort.cfg  README.md  middlewares.py  pyproject.toml  setup.cfg
ozon/: results.txt
ozon/ozon/: items.py  middlewares.py  pipelines.py  settings.py
ozon/ozon/spiders/: smartphones.py  top_os_of smartphones.py
